<resources>
    <string name="app_name">DinoDiscoveryAlphaB</string>

    <string name="menu_option_4x3">4x3 Game</string>
    <string name="menu_option_4x4">4x4 Game</string>
    <string name="menu_option_5x5">5x5 Game</string>
    <string name="menu_option_6x6">6x6 Game</string>
    <string name="menu_option_difficulty">Difficulty</string>
    <string name="difficulty">Difficulty</string>
    <string name="menu_image_difficulty">difficulty_screen</string>
    <string name="menu_option_difficulty2">Difficulty2</string>

    <string name="title_Dinodiscovery">Dino Discovery</string>
    <string name="button_4x4_game">4x4 Game</string>
    <string name="android_contentdescription">android:contentDescription</string>
    <string name="DinoDiscovery2">Dino Discovery</string>
    <string name="PlayText">Play</string>
    <string name="Background">Background</string>
    <string name="PlayButton">Play</string>
    <string name="HowToPlay">How To Play</string>
    <string name="Setting">Settings</string>
    <string name="Quit">Quit</string>
    <string name="title_game_4x4">Game 4x4</string>
    =======
    <string name="settings_menu">Settings</string>
    <string name="string_player">Player: 0</string>
    <string name="welcome_to_dino_discovery">Welcome to Dino Discovery</string>
    <string name="your_task_is_to_collect_excavate_fossils_from_the_dig_site_each_pair_of_fossils_discovered_with_provide_you_with_points"><![CDATA[Your task is to collect & excavate fossils from the dig site. Each pair of fossils discovered with provide you with points.]]></string>
    <string name="the_dinosaur_fossils_bones_in_question_are_from_the_3_periods_of_the_mesozoic_era_those_periods_being_the_triassic_jurassic_cretaceous_periods"><![CDATA[The Dinosaur fossils & bones in question are from the 3 periods of the Mesozoic era. Those periods being the Triassic, Jurassic & Cretaceous periods]]></string>
    <string name="once_all_fossils_have_been_collected_the_next_round_should_begin_as_your_progress_the_board_will_grow_get_bigger_up_to_6x6"><![CDATA[Once all fossils have been collected the next round should begin & as your progress the board will grow & get bigger up to 6x6.]]></string>
    <string name="how_to_play">How To Play</string>
    >>>>>>> f56bf2418641e06784654ac3b9afaea7d625c49d


</resources>
